# machine-learning

./: .gitignore  CLAUDE.md  CLAUDE.md.template  PROJECT.md  PROJECT_STATUS.md  README.md  pyproject.toml
.claude/commands/: bootstrap.md  go.md  plan.md
.github/workflows/: ci.yml  gpu-ci.yml
agents/: README.md  todo.md
agents/architecture/: ARCH-001.md  ARCH-002.md  ARCH-003.md  ARCH-004.md  ARCH-005.md  ARCH-006.md  ARCH-007.md  prior-art-kernel-model.md  ptx-tracer-research.md
agents/handoffs/: HANDOFF-arch-to-prog-all-reqs-2026-05-01.md  HANDOFF-arch-to-prog-sprint5-2026-05-01.md  HANDOFF-prog-to-tl-sprint10-2026-05-05.md  HANDOFF-prog-to-tl-sprint7-2026-05-05.md  HANDOFF-prog-to-tl-sprint8-2026-05-05.md  HANDOFF-prog-to-tl-sprint9-2026-05-05.md  HANDOFF-tl-to-prog-sprint1-fixes-2026-05-01.md  HANDOFF-tl-to-prog-sprint10-fixes-2026-05-05.md  HANDOFF-tl-to-prog-sprint2-fixes-2026-05-01.md  HANDOFF-tl-to-prog-sprint3-fixes-2026-05-01.md
agents/requirements/: REQ-0001.md  REQ-0002.md  REQ-0003.md  REQ-0004.md  REQ-0005.md  REQ-0006.md  REQ-0007.md  REQ-0008.md  REQ-0009.md  REQ-0010.md  REQ-0011.md  REQ-0012.md  REQ-0013.md  REQ-0014.md  TEST-PLAN-REQ-0001.md  TEST-PLAN-REQ-0002.md  (+4 more)
benchmarks/: run_all.py
docs/: multi-agent-workflow.md
notebooks/: 01_core_apis.ipynb  02_kmeans.ipynb
tests/: conftest.py  test_comparison.py  test_cupy_variants.py  test_device.py  test_interop.py  test_kernel_model.py  test_kernels.py  test_kmeans.py  test_linear.py  test_memory.py  test_naive_bayes.py  test_numba_variants.py  test_pca.py  test_ptx_tracer.py
(+144 files in other folders)
