[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cuda-python-ml-demos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cuda-python>=12.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
extras = [
    "cupy-cuda12x>=13.0",
    "torch>=2.2",
    "jupyter>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require a physical NVIDIA GPU (deselect with '-m not gpu')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
